# ppServer

docker/mariadb/: .gitignore  docker-compose.yml.example
server/: Cargo.toml
server/migrations/2021-11-02-142127_util_rand/: down.sql  up.sql
server/src/application/: Cargo.toml
server/src/application/src/: lib.rs  logger.rs  main.rs
server/src/application/src/api/: mod.rs
server/src/application/src/api/user/: mod.rs
server/src/application/src/api/util/: mod.rs
server/src/database/: Cargo.toml
server/src/database/src/: connection.rs  lib.rs  models.rs  repository.rs  schema.rs
server/src/database/src/queries/: mod.rs  util_rand.rs
