[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.7", features = ["serde"]}
diesel = { version = "1.4.8", features = ["chrono", "mysql", "r2d2", "uuidv07"]}
r2d2 = "0.8.5"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"